--- a/kubernetes/clusters/k2s/media/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/k2s/media/ciliumnetworkpolicy.yaml
@@ -90,6 +90,14 @@ spec:
         - ports:
             - port: "5432"
   egress:
+    # allow to all k8s cluster ipam ranges
+    - toCIDRSet:
+        - cidr: 192.168.8.48/28
+        - cidr: 192.168.8.16/28
+        - cidr: 192.168.8.240/28
+      toPorts:
+        - ports:
+            - port: "443"
     - toEndpoints:
         - matchLabels:
             k8s:app.kubernetes.io/component: node
@@ -168,10 +176,3 @@ spec:
       toPorts:
         - ports:
             - port: "5432"
-    - toCIDRSet:
-        - cidr: 192.168.8.48/28
-        - cidr: 192.168.8.16/28
-        - cidr: 192.168.8.240/28
-      toPorts:
-        - ports:
-            - port: "443"
