--- a/kubernetes/clusters/k2s/home-automation/kustomization.yaml
+++ b/kubernetes/clusters/k2s/home-automation/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   - ./externalsecret.yaml
+  - ./ciliumnetworkpolicy.yaml
   # Flux-Kustomizations
   - ./esphome/ks.yaml
   - ./home-assistant/ks.yaml
