--- a/kubernetes/clusters/k2s/home-automation/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/k2s/home-automation/ciliumnetworkpolicy.yaml
@@ -175,3 +175,12 @@ spec:
       toPorts:
         - ports:
             - port: "5432"
+    - toEndpoints:
+        - matchLabels:
+            k8s:app.kubernetes.io/instance: esphome
+            k8s:app.kubernetes.io/name: esphome
+            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: home-automation
+            k8s:io.kubernetes.pod.namespace: home-automation
+      toPorts:
+        - ports:
+            - port: "6052"
