--- a/kubernetes/clusters/k2s/home-automation/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/k2s/home-automation/ciliumnetworkpolicy.yaml
@@ -22,6 +22,23 @@ spec:
             k8s:io.kubernetes.pod.namespace: ingress
       toPorts:
         - ports:
+            - port: "6052"
+    - fromEndpoints:
+        - matchLabels:
+            k8s:app.kubernetes.io/component: controller
+            k8s:app.kubernetes.io/instance: nginx
+            k8s:app.kubernetes.io/managed-by: Helm
+            k8s:app.kubernetes.io/name: ingress-nginx
+            k8s:app.kubernetes.io/part-of: ingress-nginx
+            k8s:app.kubernetes.io/version: 1.9.4
+            k8s:helm.sh/chart: ingress-nginx-4.8.3
+            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: ingress
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/name: cluster-apps
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/namespace: flux-system
+            k8s:io.cilium.k8s.namespace.labels.kustomize.toolkit.fluxcd.io/prune: disabled
+            k8s:io.kubernetes.pod.namespace: ingress
+      toPorts:
+        - ports:
             - port: "8123"
     - fromEndpoints:
         - matchLabels:
