add standalone minio deployment

--- a/kubernetes/clusters/shared/kube-system/coredns/app/helmrelease.yaml
+++ b/kubernetes/clusters/shared/kube-system/coredns/app/helmrelease.yaml
@@ -66,6 +66,7 @@ spec:
               192.168.8.242 alertmanager.logfold.com
               192.168.8.242 dex.logfold.com
               192.168.8.242 grafana.logfold.com
+              192.168.8.242 minio-ui.logfold.com
               192.168.8.242 minio-console.logfold.com
               192.168.8.242 minio.logfold.com
               192.168.8.242 vault.logfold.com
