--- a/kubernetes/clusters/k0s/storage/minio/app/kustomization.yaml
+++ b/kubernetes/clusters/k0s/storage/minio/app/kustomization.yaml
@@ -3,10 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Pre Flux-Kustomizations  
-  - ./namespace.yaml
   - ./externalsecret.yaml
-  # Flux-Kustomizations
-  - ./minio-operator/ks.yaml  
-  - ./minio/ks.yaml
-  - ./restic/ks.yaml
+  - ./helmrelease.yaml
