--- a/kubernetes/clusters/k0s/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/storage/minio/app/helmrelease.yaml
@@ -34,12 +34,12 @@ spec:
               repository: quay.io/minio/minio
               tag: RELEASE.2023-11-20T22-40-07Z
             env:
-              MINIO_API_CORS_ALLOW_ORIGIN: "https://minio-ui.${DOMAIN},https://s3.${DOMAIN}"
-              MINIO_BROWSER_REDIRECT_URL: "https://minio-ui.${DOMAIN}"
+              MINIO_API_CORS_ALLOW_ORIGIN: "https://minio-console.${DOMAIN},https://s3.${DOMAIN}"
+              MINIO_BROWSER_REDIRECT_URL: "https://minio.${DOMAIN}"
               MINIO_PROMETHEUS_JOB_ID: minio
               MINIO_PROMETHEUS_URL: "https://prometheus.${DOMAIN}"
               MINIO_PROMETHEUS_AUTH_TYPE: public
-              MINIO_SERVER_URL: "https://s3.${DOMAIN}"
+              MINIO_SERVER_URL: "https://minio.${DOMAIN}"
               MINIO_UPDATE: "off"
             envFrom:
               - secretRef:
@@ -91,13 +91,13 @@ spec:
         enabled: true
         className: nginx
         hosts:
-          - host: &host "minio-ui.${DOMAIN}"
+          - host: &host "minio-console.${DOMAIN}"
             paths:
               - path: /
                 service:
                   name: main
                   port: http
-          - host: &s3Host "s3.${DOMAIN}"
+          - host: &s3Host "minio.${DOMAIN}"
             paths:
               - path: /
                 service:
