--- a/.github/workflows/meta-labeler.yaml
+++ b/.github/workflows/meta-labeler.yaml
@@ -5,6 +5,7 @@ on:
   workflow_dispatch:
   pull_request_target:
     branches: ["main"]
+    types: ["opened", "synchronize"]
 
 permissions:
   checks: write
