generalize slack webhook

--- a/kubernetes/clusters/k0s/monitoring/victoria-metrics/app/externalsecret.yaml
+++ b/kubernetes/clusters/k0s/monitoring/victoria-metrics/app/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        FLUX_SLACK_WEBHOOK: "{{ .FLUX_SLACK_WEBHOOK }}"
+        SLACK_WEBHOOK: "{{ .SLACK_WEBHOOK }}"
   dataFrom:
     - extract:
         key: /flux-system/notification
