--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -196,7 +196,7 @@ tasks:
           CLOUDFLARE_TOKEN="{{.CLOUDFLARE_TOKEN}}"
       # flux-system/notification
       - vault kv put -mount=secret flux-system/notification
-          FLUX_SLACK_WEBHOOK="{{.SLACK_WEBHOOK}}"
+          SLACK_WEBHOOK="{{.SLACK_WEBHOOK}}"
       # database/emqx
       - vault kv put -mount=secret database/emqx
           admin_password="{{.EMQX_ADMIN_PASSWORD}}"
