--- a/kubernetes/clusters/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/victoria-metrics/app/helmrelease.yaml
@@ -350,4 +350,4 @@ spec:
     - targetPath: alertmanager.config.global.slack_api_url
       kind: Secret
       name: victoria-metrics-secret
-      valuesKey: FLUX_SLACK_WEBHOOK
+      valuesKey: SLACK_WEBHOOK
