--- a/kubernetes/clusters/k0s/security/dex/app/externalsecret.yaml
+++ b/kubernetes/clusters/k0s/security/dex/app/externalsecret.yaml
@@ -75,13 +75,13 @@ spec:
                   - "https://oauth.nucstack.com/oauth2/callback"
               - id: k2s-weave-gitops
                 name: k2s-weave-gitops
-                secret: "{{.GITOPS_CLIENT_SECRET}}"
+                secret: "{{.DEX_GITOPS_CLIENT_SECRET}}"
                 redirectURIs:
                   - https://gitops.nucstack.com/oauth2/callback
 
               - id: immich
                 name: immich
-                secret: "{{.IMMICH_CLIENT_SECRET}}"
+                secret: "{{.DEX_IMMICH_CLIENT_SECRET}}"
                 redirectURIs:
                   - app.immich:/
                   - https://immich.nucstack.com/auth/login
