--- a/kubernetes/clusters/k2s/home-automation/home-assistant/app/externalsecret.yaml
+++ b/kubernetes/clusters/k2s/home-automation/home-assistant/app/externalsecret.yaml
@@ -15,12 +15,12 @@ spec:
       engineVersion: v2
       data:
         # App
-        alarm_code: "{{ .ALARM_CODE }}"
-        hacs_token: "{{ .HACS_TOKEN }}"
-        location_lat: "{{ .LOCATION_LAT }}"
-        location_long: "{{ .LOCATION_LONG }}"
+        alarm_code: "{{ .HASS_ALARM_CODE }}"
+        hacs_token: "{{ .HASS_HACS_TOKEN }}"
+        location_lat: "{{ .HASS_LOCATION_LAT }}"
+        location_long: "{{ .HASS_LOCATION_LONG }}"
         db_url: "postgresql://{{ .HASS_POSTGRES_USER }}:{{ .HASS_POSTGRES_PASSWORD }}@home-assistant-rw.home-automation.svc.cluster.local/home_assistant"
-        drac_ip: "{{ .DRAC_IP }}"
+        drac_ip: "{{ .HASS_DRAC_IP }}"
   dataFrom:
     - extract:
         key: /home-automation/home-assistant
@@ -45,10 +45,10 @@ spec:
           DEBUG=0
           USERNAME_PATTERN='^[a-z|A-Z|0-9|_|-|.]+$'
           SERVER="ldap://lldap.logfold.com"
-          USERDN="uid=$(ldap_dn_escape "$username"),ou=people,{{ .LDAP_ROOT }}"
+          USERDN="uid=$(ldap_dn_escape "$username"),ou=people,{{ .HASS_LDAP_ROOT }}"
           BASEDN="$USERDN"
           SCOPE="base"
-          FILTER="(&(uid=$(ldap_dn_escape "$username"))(memberOf=cn=home-assistant,ou=groups,{{ .LDAP_ROOT }}))"
+          FILTER="(&(uid=$(ldap_dn_escape "$username"))(memberOf=cn=home-assistant,ou=groups,{{ .HASS_LDAP_ROOT }}))"
           ATTRS="uid"
           TIMEOUT=3
 
