--- a/kubernetes/clusters/k0s/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/clusters/k0s/monitoring/grafana/app/externalsecret.yaml
@@ -14,8 +14,8 @@ spec:
     template:
       type: opaque
       data:
-        admin-user: "{{ .ADMIN_USER }}"
-        admin-password: "{{ .ADMIN_PASSWORD }}"
+        admin-user: "{{ .GRAFANA_ADMIN_USER }}"
+        admin-password: "{{ .GRAFANA_ADMIN_PASSWORD }}"
         ldap-toml: |
           verbose_logging = true
           [[servers]]
@@ -25,7 +25,7 @@ spec:
           start_tls = false
           ssl_skip_verify = true
           bind_dn = "uid=admin,ou=people,dc=logfold,dc=com"
-          bind_password = "{{ .LDAP_PASSWORD }}"
+          bind_password = "{{ .GRAFANA_LDAP_PASSWORD }}"
 
           search_filter = "(uid=%s)"
 
