--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,8 +17,8 @@
     }
   },
   "mounts": [
-    "source=/etc/timezone,target=/etc/timezone,type=bind",
-    "source=/etc/localtime,target=/etc/localtime,type=bind",
+    //"source=/etc/timezone,target=/etc/timezone,type=bind",
+    //"source=/etc/localtime,target=/etc/localtime,type=bind",
     "source=${localEnv:HOME}/.ssh,target=/home/rootless/.ssh,type=bind"
   ]
 }
