--- a/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
@@ -82,6 +82,7 @@ spec:
       walSegmentSize: 32
       import:
         schemaOnly: true
+        type: microservice
         source:
           externalCluster: immich-11
       owner: immich
