--- a/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster.yaml
@@ -83,6 +83,8 @@ spec:
       import:
         schemaOnly: true
         type: microservice
+        databases:
+          - immich
         source:
           externalCluster: immich-11
       owner: immich
