--- a/kubernetes/clusters/k2s/media/immich/database/cluster-pg15.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster-pg15.yaml
@@ -2,25 +2,33 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  name: immich
+  name: immich-pg15
   namespace: media
   annotations:
     kyverno.io/ignore: "true"
 spec:
   instances: 1
-  imageName: ghcr.io/cloudnative-pg/postgresql:14.8-7
+  imageName: ghcr.io/cloudnative-pg/postgresql:15.5-5
   inheritedMetadata:
     labels:
       kube-image-keeper.enix.io/image-caching-policy: ignore
   primaryUpdateStrategy: unsupervised
   bootstrap:
-    # initdb:
-    #   database: immich
-    #   owner: immich
-    #   secret:
-    #     name: immich-database-user
-    recovery:
-      source: immich-10
+    initdb:
+      dataChecksums: true
+      walSegmentSize: 32
+      import:
+        schemaOnly: true
+        type: microservice
+        databases:
+          - public
+        source:
+          externalCluster: immich-11
+      owner: immich
+      secret:
+        name: immich-database-user
+    # recovery:
+    #   source: immich-11
   storage:
     size: 5Gi
     storageClass: local-path
@@ -39,9 +47,9 @@ spec:
       wal:
         compression: bzip2
         maxParallel: 8
-      destinationPath: s3://pg-backup/immich
+      destinationPath: s3://pg-backup/immich-pg15
       endpointURL: "https://minio.logfold.com"
-      serverName: immich-11
+      serverName: immich-1
       s3Credentials:
         accessKeyId:
           name: immich-database-superuser
@@ -50,7 +58,7 @@ spec:
           name: immich-database-superuser
           key: secret
   externalClusters:
-  - name: immich-10
+  - name: immich-11
     barmanObjectStore:
       destinationPath: s3://pg-backup/immich
       endpointURL: "https://minio.logfold.com"
