--- a/kubernetes/clusters/k2s/media/immich/database/kustomization.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/kustomization.yaml
@@ -6,5 +6,6 @@ namespace: media
 resources:
   - ./externalsecret.yaml
   - ./cluster.yaml
+  - ./cluster-pg15.yaml
   - ./scheduledbackup.yaml
   - ./podmonitor.yaml
