--- a/kubernetes/clusters/k2s/media/immich/database/cluster-pg15.yaml
+++ b/kubernetes/clusters/k2s/media/immich/database/cluster-pg15.yaml
@@ -21,7 +21,7 @@ spec:
         schemaOnly: true
         type: microservice
         databases:
-          - public
+          - immich
         source:
           externalCluster: immich-11
       owner: immich
