test new db instance

--- a/kubernetes/clusters/k2s/media/immich/app/externalsecret.yaml
+++ b/kubernetes/clusters/k2s/media/immich/app/externalsecret.yaml
@@ -15,7 +15,7 @@ spec:
       engineVersion: v2
       data:
         DB_DATABASE_NAME: immich
-        DB_HOSTNAME: immich-rw
+        DB_HOSTNAME: immich-db-rw
         DB_USERNAME: "{{ .IMMICH_POSTGRES_USER }}"
         DB_PASSWORD: "{{ .IMMICH_POSTGRES_PASSWORD }}"
         JWT_SECRET: "{{ .IMMICH_JWT_SECRET }}"
